[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui_controlNode_dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://gamePlay/Game.gd" type="Script" id=2]
[ext_resource path="res://gamePlay/But_MoreOptions.gd" type="Script" id=3]
[ext_resource path="res://gamePlay/But_Option.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/liberation_serif_30pt.tres" type="DynamicFont" id=5]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -274.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_left = 1.0
margin_top = 1.0
margin_right = 749.0
margin_bottom = 599.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 728.0
margin_bottom = 578.0
custom_constants/separation = 10

[node name="ItemList" type="ItemList" parent="Background/MarginContainer/Rows"]
margin_right = 708.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="But_MoreOptions" type="Button" parent="Background/MarginContainer/Rows/ItemList"]
margin_right = 197.0
margin_bottom = 36.0
text = "More Options"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://Screens/MoreOptions.tscn"

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_top = 50.0
margin_right = 708.0
margin_bottom = 438.0
size_flags_vertical = 3

[node name="CurrentText" type="VBoxContainer" parent="Background/MarginContainer/Rows/GameInfo"]
margin_left = 1.0
margin_top = 1.0
margin_right = 707.0
margin_bottom = 387.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_top = 448.0
margin_right = 708.0
margin_bottom = 568.0
rect_min_size = Vector2( 0, 120 )

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/Rows/InputArea"]
margin_left = 1.0
margin_top = 1.0
margin_right = 707.0
margin_bottom = 119.0

[node name="OptionsContainer" type="VBoxContainer" parent="Background/MarginContainer/Rows/InputArea/ScrollContainer"]
margin_right = 108.0
margin_bottom = 36.0
custom_constants/separation = 5

[node name="option1" type="Button" parent="Background/MarginContainer/Rows/InputArea/ScrollContainer/OptionsContainer" instance=ExtResource( 4 )]
margin_right = 108.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
text = "Option 1"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Con_charSheet" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -294.0
margin_bottom = 406.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Con_charSheet"]
margin_left = 1.0
margin_top = 1.0
margin_right = 293.0
margin_bottom = 405.0

[node name="VBoxContainer" type="VBoxContainer" parent="Con_charSheet/MarginContainer"]
margin_right = 292.0
margin_bottom = 404.0

[node name="IL_cs_label" type="ItemList" parent="Con_charSheet/MarginContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Con_charSheet/MarginContainer/VBoxContainer/IL_cs_label"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -141.0
margin_right = 141.0
margin_bottom = 43.0
text = "Character Sheet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSheet" type="TextEdit" parent="Con_charSheet/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 292.0
margin_bottom = 404.0
size_flags_vertical = 3
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Con_chatScreen" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -292.0
margin_top = -196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Con_chatScreen"]
margin_left = 1.0
margin_top = 1.0
margin_right = 291.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IL_cs_label" type="ItemList" parent="Con_chatScreen/VBoxContainer"]
margin_right = 290.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Con_chatScreen/VBoxContainer/IL_cs_label"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -142.0
margin_right = 142.0
margin_bottom = 43.0
text = "Chat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatScreen" type="TextEdit" parent="Con_chatScreen/VBoxContainer"]
margin_top = 44.0
margin_right = 290.0
margin_bottom = 194.0
size_flags_vertical = 3
text = "Nothing yet
"
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Background/MarginContainer/Rows/ItemList/But_MoreOptions" to="Background/MarginContainer/Rows/ItemList/But_MoreOptions" method="_on_But_MoreOptions_button_up"]
